# RC522

./: CMakeLists.txt  README.md  toolchain.cmake
include/: exti.h  gpio.h  mfrc522.h  mfrc522_spi1.h  spi1.h  user_functions.h  user_types.h
src/: exti.c  gpio.c  main.c  mfrc522.c  mfrc522_spi1.c  spi1.c  user_functions.c
